// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationsTableComponent should snap like in notification page with 2 notifications sorted by create time 1`] = `
<tm-notifications-table
  NotificationsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  addNotificationEvent={[Function EventEmitter_]}
  backgroundColor={[Function String]}
  columnsData={[Function Array]}
  dateBriefPipe={[Function FormatDateBriefPipe]}
  dateDetailPipe={[Function FormatDateDetailPipe]}
  deleteNotificationEvent={[Function EventEmitter_]}
  guessTimezone={[Function String]}
  headerColorScheme="0"
  loadNotificationEditFormEvent={[Function EventEmitter_]}
  notificationStyleDescriptionPipe={[Function NotificationStyleDescriptionPipe]}
  notifications={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  rowsData={[Function Array]}
  simpleModalService={[Function SimpleModalService]}
  sortNotificationsTableRowModelsEvent={[Function EventEmitter_]}
  tableSortBy="0"
  tableSortOrder={[Function Number]}
  timeZoneService={[Function TimezoneService]}
>
  <div>
    <tm-sortable-table>
      <table
        class="table table-bordered table-striped"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            <th
              aria-sort="none"
              class="sort-by-title sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Title
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-start-time sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Start Time
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-end-time sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  End Time
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-target-user sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Target User
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-style sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Style
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-create-time sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Creation Time
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              style="text-align: start;"
            >
              <span
                container="body"
              >
                Action(s)
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              style="background-color: rgb(25, 135, 84);"
            >
              valid title 1
            </td>
            <td
              style="background-color: rgb(25, 135, 84);"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              style="background-color: rgb(25, 135, 84);"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              style="background-color: rgb(25, 135, 84);"
            >
              <span>
                INSTRUCTOR
              </span>
            </td>
            <td
              style="background-color: rgb(25, 135, 84);"
            >
              <span>
                Success (green)
              </span>
            </td>
            <td
              style="background-color: rgb(25, 135, 84);"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              style="background-color: rgb(25, 135, 84);"
            >
              <ndc-dynamic />
              <tm-group-buttons>
                <div>
                  <button
                    class="btn btn-light btn-sm"
                    style="margin-right: 6px;"
                    type="button"
                  >
                     Edit 
                  </button>
                  <button
                    class="btn btn-danger btn-sm"
                    type="button"
                  >
                     Delete 
                  </button>
                </div>
              </tm-group-buttons>
            </td>
          </tr>
          <tr>
            <td>
              valid title 2
            </td>
            <td>
              <span
                class="ngb-tooltip-class"
              >
                15 Dec 9:30 AM
              </span>
            </td>
            <td>
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td>
              <span>
                GENERAL
              </span>
            </td>
            <td>
              <span>
                Danger (red)
              </span>
            </td>
            <td>
              <span
                class="ngb-tooltip-class"
              >
                15 Nov 9:30 AM
              </span>
            </td>
            <td>
              <ndc-dynamic />
              <tm-group-buttons>
                <div>
                  <button
                    class="btn btn-light btn-sm"
                    style="margin-right: 6px;"
                    type="button"
                  >
                     Edit 
                  </button>
                  <button
                    class="btn btn-danger btn-sm"
                    type="button"
                  >
                     Delete 
                  </button>
                </div>
              </tm-group-buttons>
            </td>
          </tr>
        </tbody>
      </table>
    </tm-sortable-table>
  </div>
</tm-notifications-table>
`;

exports[`NotificationsTableComponent should snap like in notification page with 2 notifications sorted by start time 1`] = `
<tm-notifications-table
  NotificationsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  addNotificationEvent={[Function EventEmitter_]}
  backgroundColor={[Function String]}
  columnsData={[Function Array]}
  dateBriefPipe={[Function FormatDateBriefPipe]}
  dateDetailPipe={[Function FormatDateDetailPipe]}
  deleteNotificationEvent={[Function EventEmitter_]}
  guessTimezone={[Function String]}
  headerColorScheme="0"
  loadNotificationEditFormEvent={[Function EventEmitter_]}
  notificationStyleDescriptionPipe={[Function NotificationStyleDescriptionPipe]}
  notifications={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  rowsData={[Function Array]}
  simpleModalService={[Function SimpleModalService]}
  sortNotificationsTableRowModelsEvent={[Function EventEmitter_]}
  tableSortBy="0"
  tableSortOrder={[Function Number]}
  timeZoneService={[Function TimezoneService]}
>
  <div>
    <tm-sortable-table>
      <table
        class="table table-bordered table-striped"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            <th
              aria-sort="none"
              class="sort-by-title sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Title
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-start-time sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Start Time
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-end-time sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  End Time
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-target-user sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Target User
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-style sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Style
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-create-time sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Creation Time
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              style="text-align: start;"
            >
              <span
                container="body"
              >
                Action(s)
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              style="background-color: rgb(25, 135, 84);"
            >
              valid title 1
            </td>
            <td
              style="background-color: rgb(25, 135, 84);"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              style="background-color: rgb(25, 135, 84);"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              style="background-color: rgb(25, 135, 84);"
            >
              <span>
                INSTRUCTOR
              </span>
            </td>
            <td
              style="background-color: rgb(25, 135, 84);"
            >
              <span>
                Success (green)
              </span>
            </td>
            <td
              style="background-color: rgb(25, 135, 84);"
            >
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td
              style="background-color: rgb(25, 135, 84);"
            >
              <ndc-dynamic />
              <tm-group-buttons>
                <div>
                  <button
                    class="btn btn-light btn-sm"
                    style="margin-right: 6px;"
                    type="button"
                  >
                     Edit 
                  </button>
                  <button
                    class="btn btn-danger btn-sm"
                    type="button"
                  >
                     Delete 
                  </button>
                </div>
              </tm-group-buttons>
            </td>
          </tr>
          <tr>
            <td>
              valid title 2
            </td>
            <td>
              <span
                class="ngb-tooltip-class"
              >
                15 Dec 9:30 AM
              </span>
            </td>
            <td>
              <span
                class="ngb-tooltip-class"
              >
                15 Sep 9:30 AM
              </span>
            </td>
            <td>
              <span>
                GENERAL
              </span>
            </td>
            <td>
              <span>
                Danger (red)
              </span>
            </td>
            <td>
              <span
                class="ngb-tooltip-class"
              >
                15 Nov 9:30 AM
              </span>
            </td>
            <td>
              <ndc-dynamic />
              <tm-group-buttons>
                <div>
                  <button
                    class="btn btn-light btn-sm"
                    style="margin-right: 6px;"
                    type="button"
                  >
                     Edit 
                  </button>
                  <button
                    class="btn btn-danger btn-sm"
                    type="button"
                  >
                     Delete 
                  </button>
                </div>
              </tm-group-buttons>
            </td>
          </tr>
        </tbody>
      </table>
    </tm-sortable-table>
  </div>
</tm-notifications-table>
`;

exports[`NotificationsTableComponent should snap with default fields 1`] = `
<tm-notifications-table
  NotificationsTableHeaderColorScheme={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  addNotificationEvent={[Function EventEmitter_]}
  backgroundColor={[Function String]}
  columnsData={[Function Array]}
  dateBriefPipe={[Function FormatDateBriefPipe]}
  dateDetailPipe={[Function FormatDateDetailPipe]}
  deleteNotificationEvent={[Function EventEmitter_]}
  guessTimezone={[Function String]}
  headerColorScheme="0"
  loadNotificationEditFormEvent={[Function EventEmitter_]}
  notificationStyleDescriptionPipe={[Function NotificationStyleDescriptionPipe]}
  notifications={[Function Array]}
  notificationsTableRowModelsSortBy={[Function Number]}
  notificationsTableRowModelsSortOrder="0"
  rowsData={[Function Array]}
  simpleModalService={[Function SimpleModalService]}
  sortNotificationsTableRowModelsEvent={[Function EventEmitter_]}
  tableSortBy="0"
  tableSortOrder={[Function Number]}
  timeZoneService={[Function TimezoneService]}
>
  <div>
    <tm-sortable-table>
      <table
        class="table table-bordered table-striped"
      >
        <thead>
          <tr
            class="bg-primary text-white"
          >
            <th
              aria-sort="none"
              class="sort-by-title sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Title
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-start-time sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Start Time
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-end-time sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  End Time
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-target-user sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Target User
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-style sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Style
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              class="sort-by-create-time sortable-header"
              style="text-align: start;"
            >
              <button
                class="d-lg-flex align-items-center gap-lg-1 d-inline"
              >
                <span
                  container="body"
                >
                  Creation Time
                </span>
                <span
                  aria-hidden="true"
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </button>
            </th>
            <th
              aria-sort="none"
              style="text-align: start;"
            >
              <span
                container="body"
              >
                Action(s)
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
        </tbody>
      </table>
    </tm-sortable-table>
  </div>
</tm-notifications-table>
`;
